--- a/edge-modules/TestAnalyzer/docker/linux/arm32v7/base/Dockerfile
+++ b/edge-modules/TestAnalyzer/docker/linux/arm32v7/base/Dockerfile
@@ -1,11 +1,6 @@
 ARG base_tag=2.1.16-bionic-arm32v7
 FROM mcr.microsoft.com/dotnet/core/runtime:${base_tag}
 
-# Add an unprivileged user account for running Edge Hub
-ARG EDGEHUBUSER_ID=1000
-RUN useradd -ms /bin/bash -u ${EDGEHUBUSER_ID} edgehubuser
-ENV EdgeHubUser=edgehubuser
-
 RUN apt-get update && apt-get install -y libcap2-bin libsnappy1v5 && \
     ln -s /lib/arm-linux-gnueabihf/libdl.so.2 /usr/lib/arm-linux-gnueabihf/libdl.so && \
     ln -s /lib/arm-linux-gnueabihf/libc.so.6 /usr/lib/arm-linux-gnueabihf/libc.so && \
@@ -13,6 +8,6 @@ RUN apt-get update && apt-get install -y libcap2-bin libsnappy1v5 && \
 
 COPY librocksdb.so /usr/lib/
 
-# add the CAP_NET_BIND_SERVICE capability to the dotnet binary because
-# we are starting edge hub as a non-root user
-RUN setcap 'cap_net_bind_service=+ep' /usr/share/dotnet/dotnet
+# Add an unprivileged user account for running the module
+RUN useradd -ms /bin/bash moduleuser
+USER moduleuser
