--- a/edge-modules/TestAnalyzer/docker/linux/arm64v8/base/Dockerfile
+++ b/edge-modules/TestAnalyzer/docker/linux/arm64v8/base/Dockerfile
@@ -1,11 +1,6 @@
 ARG base_tag=3.0.3-bionic-arm64v8
 FROM mcr.microsoft.com/dotnet/core/runtime:${base_tag}
 
-# Add an unprivileged user account for running Edge Hub
-ARG EDGEHUBUSER_ID=1000
-RUN useradd -ms /bin/bash -u ${EDGEHUBUSER_ID} edgehubuser
-ENV EdgeHubUser=edgehubuser
-
 RUN apt-get update && \
     apt-get install -y libsnappy1v5 && \
     apt-get install -y libcap2-bin && \
@@ -14,9 +9,9 @@ RUN apt-get update && \
     ln -s /lib/aarch64-linux-gnu/libdl.so.2 /lib/aarch64-linux-gnu/libdl.so && \
     ln -s /lib/aarch64-linux-gnu/libdl.so.2 /usr/lib/aarch64-linux-gnu/libdl.so && \
     ln -s /lib/aarch64-linux-gnu/libc.so.6 /usr/lib/aarch64-linux-gnu/libc.so.6
-    
+
 COPY  librocksdb.so /usr/lib
 
-# add the CAP_NET_BIND_SERVICE capability to the dotnet binary because
-# we are starting edge hub as a non-root user
-RUN setcap 'cap_net_bind_service=+ep' /usr/share/dotnet/dotnet
+# Add an unprivileged user account for running the module
+RUN useradd -ms /bin/bash moduleuser
+USER moduleuser
