--- a/edge-modules/TestAnalyzer/docker/linux/arm64v8/Dockerfile
+++ b/edge-modules/TestAnalyzer/docker/linux/arm64v8/Dockerfile
@@ -1,9 +1,9 @@
 ARG base_tag=1.0.4-linux-arm64v8
-FROM azureiotedge/azureiotedge-module-base:${base_tag}
+FROM edgebuilds.azurecr.io/microsoft/azureiotedge-module-base-rocksdb:${base_tag}
 
 ARG EXE_DIR=.
 
-ENV MODULE_NAME "DirectMethodCloudSender.dll"
+ENV MODULE_NAME "TestAnalyzer.dll"
 
 WORKDIR /app
 
@@ -12,4 +12,4 @@ COPY $EXE_DIR/ ./
 USER moduleuser
 
 CMD echo "$(date --utc +"%Y-%m-%d %H:%M:%S %:z") Starting Module" && \
-    exec /usr/bin/dotnet DirectMethodCloudSender.dll
+    exec /usr/bin/dotnet TestAnalyzer.dll
