Update to debian:10-slim to avoid vulnerability.

--- a/edgelet/iotedged/docker/linux/amd64/Dockerfile
+++ b/edgelet/iotedged/docker/linux/amd64/Dockerfile
@@ -1,9 +1,11 @@
-FROM debian:9-slim
+FROM debian:10-slim
 
 # package installation needs to exec as root
 RUN apt-get update && apt-get install -y \
+  ca-certificates && \
+  echo "deb http://deb.debian.org/debian stretch main" >> /etc/apt/sources.list && \
+  apt-get update && apt-get install -y \
   libssl1.0.2 \
-  ca-certificates \
   && rm -rf /var/lib/apt/lists/*
 
 # run everything else as system user
